# rust-git-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
commands/: Cargo.toml  create  delete  help  keys  list  move  rename
commands/src/: lib.rs
manage/: add  help  keys  list  remove
rust/: Cargo.toml
rust/src/: lib.rs
