[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
regex = "1.10.6"
globset = "0.4.15"
users = "0.11.0"
walkdir = "2.5.0"
itertools = "0.13.0"
shlex = "1.3.0"
crossterm = "0.28.1"
phf = { version = "0.11.2", features = ["macros"] }
